<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">
    <!-- Greeting that includes the user's name -->
    <TextView
        android:id="@+id/tvGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text=""
        android:textSize="24sp" />
    <!-- Button to browse restaurants -->
    <Button
        android:id="@+id/btnBrowseRestaurants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/restaurants" />
    <!-- Button for groups and friends -->
    <Button
        android:id="@+id/btnGroupsFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/friends" />
    <!-- Button for settings -->
    <Button
        android:id="@+id/btnInvites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invites" />
</LinearLayout>